--- a/style.css
+++ b/style.css
@@ -1,12 +1,92 @@
 * {
     text-align: center;
 }
-body {
-    background-color: #F1EEE9;
+h1 {
+    text-shadow: 3px 3px 7px #fff;
 }
 .container {
-    background-color: white;
     border-radius: 10px;
     margin: 10px;
     margin-top: 10px;
 }
+.add {
+    border: solid 1px black;
+    border-radius: 18px;
+    font-size: 15px;
+    color: #fff;
+    cursor: pointer;
+}
+.remove {
+    border: solid 1px black;
+    border-radius: 18px;
+    font-size: 15px;
+    color: #fff;
+    cursor: pointer;
+}
+footer > button {
+    border: solid 1px black;
+    border-radius: 18px;
+    font-size: 15px;
+    color: #fff;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 414px) and (max-height: 736px)  {
+    body {
+        /* background-color: #F1EEE9; */
+        background-image: url('https://images-na.ssl-images-amazon.com/images/I/41YRLx3kMAL._AC_SL1200_.jpg');
+    }
+    .container {
+        background-color: white;
+        box-shadow: 10px 5px 5px #A79081;
+    }
+    .add {
+        background-color: #797F65;
+    }
+    .remove {
+        background-color: #975150;
+    }
+    footer > button {
+        color: #fff;
+        text-transform: uppercase;
+        background: #60a3bc;
+        padding: 15px;
+        border-radius: 50px;
+        border: none;
+    }
+}
+
+@media screen and (min-width: 768px) and (min-height: 1024px){
+    body {
+        /* background-color: grey; */
+        background-image: url('https://miro.medium.com/max/1080/1*hU0QQDiOnsKpX4qlIyn_4w.jpeg');
+        font-size: 25px;
+    }
+    .container {
+        box-shadow: 10px 5px 5px #47454B;
+        position: relative;
+        left: 20%;
+        width: 60%;
+        font-size: 25px;
+    }
+    .container {
+        background-color: white;
+    }
+    .add {
+        background-color: #797F65;
+        font-size: 20px;
+    }
+    .remove {
+        background-color: #975150;
+        font-size: 20px;
+    }
+    footer > button {
+        color: #fff;
+        text-transform: uppercase;
+        background: #60a3bc;
+        padding: 20px;
+        border-radius: 50px;
+        border: none;
+    }
+}
+
