--- a/style.css
+++ b/style.css
@@ -46,11 +46,19 @@ p {
 @media screen and (max-width: 414px) and (max-height: 736px)  {
     body {
         /* background-color: #F1EEE9; */
-        background-image: url('https://images-na.ssl-images-amazon.com/images/I/41YRLx3kMAL._AC_SL1200_.jpg');
+        background-color: #D9AFD9;
+        background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 94%, #ffffff 100%);
+    }
+    h1 {
+        font-size: 30px;
+    }
+    p {
+        font-size: 20px;
     }
     .container {
         background-color: white;
         box-shadow: 10px 5px 5px #A79081;
+        padding-top: 5px;
     }
     .add {
         background-color: #797F65;
@@ -65,13 +73,19 @@ p {
         padding: 15px;
         border-radius: 50px;
         border: none;
+        margin-bottom: 15px;
+    }
+    table  {
+        background-color: white;
+        font-size: 15px;
+        border-radius: 5px;
+        margin: auto;
+        border: 2px solid white;
     }
 }
 
 @media screen and (min-width: 768px) and (min-height: 1024px){
     body {
-        /* background-color: grey; */
-        background-color: #2f97ec;
         background-image: linear-gradient(62deg, #2f97ec 0%, #E0C3FC 100%);
 
     }
