--- a/style.css
+++ b/style.css
@@ -2,12 +2,9 @@
 * {
     text-align: center;
     font-family: 'Rubik', sans-serif;
+    list-style: none;
+}
 
-}
-body {
-    background-color: #8EC5FC;
-    /* background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
-}
 h1 {
     font-size: 45px;
     text-shadow: 3px 3px 7px #fff;
@@ -41,6 +38,7 @@ footer > button {
 p {
     font-size: 25px;
 }
+
 
 
 @media screen and (max-width: 414px) and (max-height: 736px)  {
@@ -125,4 +123,71 @@ p {
         border: 2px solid white;
     }
 }
+
+@media screen and (min-width: 1299px) and (min-height: 690px){
+
+    section.container {
+        display: flex;
+    }
+    .global_container {
+        margin: auto;
+        width: 100%;
+        background-color: transparent;
+        border-radius: 15px;
+    }
+    section > article {
+        position: relative;
+        align-items: center;
+    }
+
+    h1 {
+        font-size: 60px;
+    }
+    body {
+        background-color: #52ACFF;
+        background-image: linear-gradient(0deg, #52ACFF 25%, #FFE32C 100%);
+
+
+    }
+    .container {
+        box-shadow: 10px 5px 5px #47454B;
+        position: relative;
+        left: 20%;
+        width: 60%;
+        font-size: 25px;
+        background-color: white;
+
+        padding: 10px;  
+    }
+    .add {
+        background-color: #797F65;
+        font-size: 20px;
+        margin-top: 30px;
+    }
+    .remove {
+        background-color: #975150;
+        font-size: 20px;
+    }
+    footer > button {
+        color: #fff;
+        text-transform: uppercase;
+        background: #60a3bc;
+        padding: 20px;
+        font-size: 25px;
+        border-radius: 50px;
+        border: none;
+        margin-bottom: 20px;
+    }
+    table  {
+        background-color: white;
+        font-size: 30px;
+        border-radius: 5px;
+        margin: auto;
+        border: 2px solid white;
+    }
+    .cc {
+        padding-left: 20px
+    }
+}
+
 
